--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,19 +4,19 @@
 
 {% block content %}
 <div class="container mt-4">
-    <div class="card shadow-sm">
-        <div class="card-header bg-light">
-            <h3 class="mb-0">Личный кабинет</h3>
+    <div class="card">
+        <div class="card-header">
+            <h3>Личный кабинет контрагента АО БМК</h3>
         </div>
         <div class="card-body">
-            <h4 class="mb-4">Добро пожаловать в личный кабинет</h4>
+            <h4 class="mb-4">Добро пожаловать в личный кабинет контрагента АО БМК</h4>
 
             {% if organization %}
             <div class="organization-info">
                 <h5>Данные вашей организации:</h5>
                 <table class="table table-bordered mt-3">
                     <tr>
-                        <th style="width: 250px;">Наименование организации:</th>
+                        <th style="width: 200px;">Наименование организации:</th>
                         <td>{{ organization.npo }}</td>
                     </tr>
                     <tr>
@@ -27,38 +27,15 @@
                         <th>Адрес:</th>
                         <td>{{ organization.address }}</td>
                     </tr>
-                    <tr>
-                        <th>Код организации (KPO):</th>
-                        <td>{{ organization.kpo }}</td>
-                    </tr>
                 </table>
             </div>
             {% else %}
             <div class="alert alert-danger">
-                <h5><i class="fas fa-exclamation-triangle"></i> ОШИБКА: Организация не найдена!</h5>
+                <h5>❌ ОШИБКА: Организация не найдена!</h5>
                 <p>Пользователь не привязан к организации.</p>
                 <p>Обратитесь к администратору.</p>
             </div>
             {% endif %}
-            
-            <!-- Информация о пользователе -->
-            <div class="mt-5">
-                <h5>Информация о пользователе:</h5>
-                <table class="table">
-                    <tr>
-                        <th style="width: 250px;">Email:</th>
-                        <td>{{ session.get('email') }}</td>
-                    </tr>
-                    <tr>
-                        <th>ID личного кабинета:</th>
-                        <td>{{ session.get('pers_room_id') }}</td>
-                    </tr>
-                    <tr>
-                        <th>Статус:</th>
-                        <td><span class="badge bg-success">Активен</span></td>
-                    </tr>
-                </table>
-            </div>
         </div>
     </div>
 </div>
