--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Личный кабинет{% endblock %}
+{% block title %}Профиль{% endblock %}
 
 {% block content %}
 <div class="container mt-4">
@@ -25,7 +25,7 @@
                     </tr>
                     <tr>
                         <th>Адрес:</th>
-                        <td>{{ organization.address }}</td>
+                        <td>{{ organization.adres }}</td>  <!-- Исправлено с address на adres -->
                     </tr>
                 </table>
             </div>
