--- a/templates/profile.html
+++ b/templates/profile.html
@@ -16,7 +16,7 @@
                 <h5>Данные вашей организации:</h5>
                 <table class="table table-bordered mt-3">
                     <tr>
-                        <th style="width: 200px;">Наименование организации:</th>
+                        <th style="width: 250px;">Наименование организации:</th>
                         <td>{{ organization.npo }}</td>
                     </tr>
                     <tr>
@@ -25,7 +25,7 @@
                     </tr>
                     <tr>
                         <th>Адрес:</th>
-                        <td>{{ organization.adres }}</td>  <!-- Исправлено с address на adres -->
+                        <td>{{ organization.adres }}</td>
                     </tr>
                 </table>
             </div>
